syntax = "proto3";

package blockchain;

service Blockchain {
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
  rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse) {}
}

message AddBlockRequest {
  string data = 1;
}

message AddBlockResponse {
  string hash = 1;
}

message GetBlockchainRequest {

}

message Block{
  string hash = 1;
  string previousHash = 2;
  string data = 3;
}

message GetBlockchainResponse {
  repeated Block blocks = 1;
}
